www/static/main.css
body {
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
    sans-serif, Apple Color Emoji, Segoe UI Emoji;
  font-size: 16px;
  word-wrap: break-word;
}

.page {
  display: flex;
  height: 100vh;
  overflow: hidden;
}

.sidebar {
  display: none;
  width: 18rem;
  border-right: 1px solid var(--color-border-subtle);
  background-color: var(--color-canvas-subtle);
}

@media screen and (min-width: 768px) {
  .sidebar {
    display: flex;
    flex-shrink: 0;
    flex-direction: column;
  }
}

.sidebar header {
  padding: 1rem 0;
  border-bottom: 1px solid var(--color-border-subtle);
  background-color: var(--color-canvas-subtle);
}

.sidebar header .logo {
  padding: 0 1rem;
  display: flex;
  align-items: center;
}

.sidebar header .logo img {
  width: 3rem;
}

.sidebar header .logo h3 {
  margin: 0 1rem;
  color: var(--color-fg-default);
  font-size: 1.5rem;
  line-height: 1.5rem;
  letter-spacing: -.025em;
}

.sidebar header .logo:hover {
  text-decoration: none;
}

.sidebar header .version {
  margin-top: 1.25rem;
  padding: 0 1rem;
}

.sidebar header .version .selector {
  background-color: var(--color-canvas-default);
  border: 1px solid var(--color-border-subtle);
  padding: 0.5rem 1rem;
  border-radius: 0.5rem;
}

.sidebar header #docsearch {
  margin-top: 1rem;
  padding: 0 1.25rem;
  width: 100%;
  height: 2.25rem;
}

.DocSearch-Button {
  margin: 0;
  width: 100%;
}

.sidebar nav {
  padding-top: 0.5rem;
  padding-bottom: 2rem;
  display: flex;
  flex-direction: column;
  overflow-y: auto;
}

.sidebar nav .toc {
  padding: 0 1rem;
}

.sidebar nav .toc .list {
  list-style: none;
  list-style-position: inside;
  counter-reset: item;
  margin: 0;
  padding: 0;
}

.sidebar nav .toc > .list {
  font-weight: bold;
}

.sidebar nav .toc .list li > a {
  color: inherit;
  text-decoration: none;
}

.sidebar nav .toc .list li.active > a {
  color: var(--color-accent-fg);
}

.sidebar nav .toc .list li > a:hover {
  text-decoration: underline;
}

.sidebar nav .toc .list .list li > a {
  font-weight: normal;
}

.sidebar nav .toc .list > li:before {
  font-feature-settings: "kern" 1, "tnum" 1;
  -webkit-font-feature-settings: "kern" 1, "tnum" 1;
  -ms-font-feature-settings: "kern" 1, "tnum" 1;
  -moz-font-feature-settings: "kern" 1, "tnum" 1;
  content: counters(item, ".") ". ";
  counter-increment: item;
}

.sidebar nav .toc .list .list {
  margin-left: 1rem;
}

.sidebar nav .toc .list > li {
  margin: 0.5rem 0;
}

.sidebar nav .toc .list .list > li {
  margin: .125rem 0;
}

.content {
  display: flex;
  flex-direction: column;
  width: 0;
  flex: 1 1 0%;
  overflow: hidden;
}

.content .warning-banner {
  background-color: #faca15;
  color: #000;
}

.content .warning-banner .inner {
  padding: 1rem;
  max-width: 768px;
  width: 100%;
  margin: 0 auto;
}

.content .warning-banner .inner a {
  color: #000;
  text-decoration: underline;
}

.content main {
  overflow-y: auto;
  width: 100%;
}

.content main .md {
  max-width: 768px;
  width: 100%;
  margin: 0 auto;

  padding: 0 1rem;
  padding-bottom: 4rem;
}

@media (min-width: 640px) {
  .content main .md {
    padding: 0 1.5rem;
    padding-bottom: 5rem;
  }
}

@media screen and (min-width: 768px) {
  .content main .md {
    padding: 0 2rem;
  }
}


.content main .md .edit-on-github {
  float: right;
  margin-top: 2.25rem;
  margin-right: 1rem;
}

.content main .md .edit-on-github svg {
  display: inline;
  width: 1.5rem;
  height: 1.5rem;
}

.content main .md .markdown-body {
  padding: 2rem 1rem;
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border-width: 0;
}

